--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,19 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical"
-       android:gravity="center|top">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="B1"
-            android:layout_marginVertical="10dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="B1"
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center"/>
 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
-           android:layout_marginVertical="10dp">
+           android:layout_marginVertical="5dp">
+
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
@@ -51,13 +46,16 @@
            android:layout_height="wrap_content"
            android:text="B6"
            android:layout_gravity="left"
+           android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="30dp"/>
 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
-           android:layout_marginVertical="10dp">
+           android:layout_marginTop="10dp"
+           android:layout_marginBottom="5dp">
+
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
@@ -68,9 +66,4 @@
                android:text="Button number 8"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>
-
-
-   </LinearLayout>
-
-
 </LinearLayout>
